# python-template

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
docs/: CHANGELOG.md  index.md
src/myproject/: __init__.py  cli.py  main.py
